Did some homework on the Todoapp

--- a/Lecture-4/Index.html
+++ b/Lecture-4/Index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lec 4</title>
 
+    <link rel="stylesheet" href="./style.css">
     <script defer src="./App.js"></script>
-</head>
-<body>
-    
-</body>
+    <script defer src="./Todo.js"></script>
+  </head>
+  <body>
+    <div class="maincontainer">
+      <!-- <img class="mobileheader" src="./Assets/Mobileheader.svg" /> -->
+      <!-- <img class="desktopheader" src="./Assets/DesktopHeader.svg" /> -->
+      <div class="container maininput">
+        <input type="text" id="todoInput" placeholder="Create a new todo…" />
+        <div class="listcontainer list1"></div>
+        <!-- <div class="maininputimgcontainer">
+          <img class="maininputimg" src="./Assets/Check.svg" />
+        </div> -->
+        <!-- <div class="MobileSearch">
+          <img width="24px" height="24px" src="./Assets/Add_icon.svg" />
+        </div> -->
+      </div>
+      <!-- <footer>
+        <h3 class="Itemcount">5 items left</h3>
+        <div class="allactiveandcompleted">
+          <h3 class="all">All</h3>
+          <h3>Active</h3>
+          <h3>Completed</h3>
+        </div>
+        <h3 class="completedtasks">Clear Completed</h3>
+      </footer> -->
+    </div>
+  </body>
 </html>
